<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_image"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="d16124837.mydit.ie.mcsdemo.ImageActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:paddingBottom="10dp"
        android:contentDescription="@string/image_content_description" />

    <TextView
        android:text="@string/path_to_file"
        android:textStyle="bold"
        android:id="@+id/filename_desc"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"/>

    <TextView
        android:id="@+id/filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/filename_desc"
        android:layout_toEndOf="@+id/filename_desc"/>

    <TextView
        android:text="@string/tags"
        android:textStyle="bold"
        android:id="@+id/tags_desc"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filename"/>

    <TextView
        android:id="@+id/tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tags_desc"
        android:layout_toEndOf="@+id/tags_desc"/>

    <TextView
        android:text="@string/description"
        android:textStyle="bold"
        android:id="@+id/description_desc"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tags_desc"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/description_desc"
        android:layout_toEndOf="@+id/description_desc"/>

    <TextView
        android:text="@string/caption"
        android:textStyle="bold"
        android:id="@+id/caption_desc"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_desc"/>

    <TextView
        android:id="@+id/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/caption_desc"
        android:layout_toEndOf="@+id/caption_desc"/>

    <TextView
        android:text="@string/colors"
        android:textStyle="bold"
        android:id="@+id/colors_desc"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/caption_desc"/>

    <TextView
        android:id="@+id/colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/colors_desc"
        android:layout_toEndOf="@+id/colors_desc"/>

    <Button
        android:id="@+id/button_analyse"
        android:text="@string/analyse_image"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/button_delete"/>

    <Button
        android:id="@+id/button_delete"
        android:text="@string/delete_image"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"/>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:translationZ="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:padding="150dp"
        android:id="@+id/progressBar"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:layout_centerInParent="true"
	    android:background="@color/colorPrimary"
	    android:alpha="0.5"/>

</RelativeLayout>
